# Automobile_Voice_Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  RUN.md  SUMMARY.md  agent.py  agent_test.py  db.py  livekit.toml  main.py  pyproject.toml  requirements.txt  test_voice.py
data/: call_context.json
tasks/: __init__.py  permission_to_talk.py  recording_consent.py  relative_choice.py  soft_engagement.py  verify_customer.py
